New feature, exchange rates chart and cv pdf

--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -8,7 +8,7 @@
 <form method="post" th:action="@{/calculate}" th:object="${calculatorForm}">
     <input th:field="*{num1}"><br>
     <select th:field="*{operator}">
-        <option th:each="o : ${operators}" th:value="${o}" th:text="${o}"></option>
+        <option th:each="o : ${operators}" th:text="${o}" th:value="${o}"></option>
     </select>
     <br><input th:field="*{num2}"><br>
     <button type="submit">Calculate</button>
