--- a/src/main/resources/templates/graphExecute.html
+++ b/src/main/resources/templates/graphExecute.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="ISO-8859-1"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/4.2.1/js/bootstrap.min.js}" type="text/javascript"></script>
 
 </head>
 <body>
