--- a/src/main/resources/templates/graphForm.html
+++ b/src/main/resources/templates/graphForm.html
@@ -7,9 +7,9 @@
 <h1>Graph Display</h1>
 <form method="post" th:action="@{/graph/execute}" th:object="${graphForm}">
     <select th:field="*{name}">
-        <option th:each="t : ${charts}" th:value="${t}" th:text="${t}"></option>
+        <option th:each="t : ${charts}" th:text="${t}" th:value="${t}"></option>
     </select>
-    <button type="submit">Display </button>
+    <button type="submit">Display</button>
 </form>
 <br>
 </body>
