--- a/src/main/resources/templates/kantor.html
+++ b/src/main/resources/templates/kantor.html
@@ -20,6 +20,7 @@
             align-items: center;
             min-height: 100vh;
             position: relative;
+            flex-direction: column;
         }
 
         #welcome-modal {
@@ -63,9 +64,9 @@
             max-width: 400px;
             width: 100%;
             text-align: center;
+            margin-bottom: 20px;
         }
 
-        /* Heading styling */
         h1 {
             color: #2b6cb0;
             margin-bottom: 20px;
@@ -120,27 +121,20 @@
             background-color: #2c5282;
         }
 
-        div[th\\:if]{
-            margin-top: 20px
-        ;
-            padding: 10px
-        ;
-            border-radius: 4px
-        ;
+        div[th\\:if] {
+            margin-top: 20px;
+            padding: 10px;
+            border-radius: 4px;
         }
 
-        div[th\\:if="${result}"]{
-            background-color: #c6f6d5
-        ;
-            color: #2f855a
-        ;
+        div[th\\:if="${result}"] {
+            background-color: #c6f6d5;
+            color: #2f855a;
         }
 
-        div[th\\:if="${error}"]{
-            background-color: #fed7d7
-        ;
-            color: #c53030
-        ;
+        div[th\\:if="${error}"] {
+            background-color: #fed7d7;
+            color: #c53030;
         }
 
         footer {
@@ -195,10 +189,32 @@
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: block;
         }
 
-        #currencyChart {
-            display: block;
+        @media (max-width: 768px) {
+            .container {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 20px;
+            }
+
+            form {
+                width: 100%;
+                max-width: 100%;
+                margin: 10px 0;
+            }
+
+            .footer-right {
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                margin-right: 0;
+            }
+
+            #currencyChart {
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
@@ -208,7 +224,9 @@
 <div id="welcome-modal">
     <div id="welcome-content">
         <h2>Hello!</h2>
-        <p>Hello! My name is Jacob, and welcome to my non-commercial currency exchange project. This platform is powered by the National Bank of Poland (NBP) API, providing real-time and historical exchange rates for PLN. You can find more about me, including my CV, LinkedIn, GitHub, and other details, below.</p>
+        <p>Hello! My name is Jacob, and welcome to my non-commercial currency exchange project. This platform is powered
+            by the National Bank of Poland (NBP) API, providing real-time and historical exchange rates for PLN. You can
+            find more about me, including my CV, LinkedIn, GitHub, and other details, below.</p>
         <button onclick="closeWelcomeModal()">Next</button>
     </div>
 </div>
