--- a/src/main/resources/templates/kantor.html
+++ b/src/main/resources/templates/kantor.html
@@ -335,7 +335,7 @@
     <div class="footer-right">
         <a href="https://www.linkedin.com/in/jakub-woi%C5%84ski-718985268/" target="_blank">LinkedIn</a>
         <a href="https://github.com/JWoinski" target="_blank">GitHub</a>
-        <a class="cv-button" href="/CV-JAKUB-WOINSKI.pdf" target="_blank">CV</a>
+        <a class="cv-button" href="/Cv-Jakub-Woinski.pdf" target="_blank">CV</a>
 
     </div>
 </footer>
